Fixed some spelling errors

--- a/additional_content/degree_project.MULTILINGUAL.html
+++ b/additional_content/degree_project.MULTILINGUAL.html
@@ -38,8 +38,8 @@
 @en  the problems that will arise frequently or, even worse, only in unexpected situations. Although the
 @en  situation of facing unknown and 'weird' situations is pretty common in the day to day of a programmer,
 @en  facing new complications are time consuming.
-@es  Disparidad en la codificacion, problemas con interrupciones de varios niveles o desbordamiento podrían ser algunos
-@es  de los problemas que pueden encontrarse frequentemente o, peor aún, cuando uno no se lo espera. Aunque
+@es  Disparidad en la codificación, problemas con interrupciones de varios niveles o desbordamiento podrían ser algunos
+@es  de los problemas que pueden encontrarse frecuentemente o, peor aún, cuando uno no se lo espera. Aunque
 @es  lidiar con situaciones 'desconocidas' es bastante común en el día a día del programador, éstas se llevan de por medio
 @es  bastante tiempo.
 </p>
