--- a/additional_content/degree_project.es.html
+++ b/additional_content/degree_project.es.html
@@ -26,8 +26,8 @@ Boceto inicial sobre el proyecto
 </p>
 
 <p>
- Disparidad en la codificacion, problemas con interrupciones de varios niveles o desbordamiento podrían ser algunos
- de los problemas que pueden encontrarse frequentemente o, peor aún, cuando uno no se lo espera. Aunque
+ Disparidad en la codificación, problemas con interrupciones de varios niveles o desbordamiento podrían ser algunos
+ de los problemas que pueden encontrarse frecuentemente o, peor aún, cuando uno no se lo espera. Aunque
  lidiar con situaciones 'desconocidas' es bastante común en el día a día del programador, éstas se llevan de por medio
  bastante tiempo.
 </p>
