--- a/additional_content/infobox_project.MULTILINGUAL.html
+++ b/additional_content/infobox_project.MULTILINGUAL.html
@@ -8,7 +8,7 @@
 <i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered">
 @en  How to show your impressive portfolio?
-@es  ¿Cómo podrías mostrar tu increible porfolio?
+@es  ¿Cómo podrías mostrar tu increíble porfolio?
 </h2>
 <p>
 @en    Of course with
