--- a/additional_content/infobox_project.es.html
+++ b/additional_content/infobox_project.es.html
@@ -6,7 +6,7 @@
 
 <i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered">
- ¿Cómo podrías mostrar tu increible porfolio?
+ ¿Cómo podrías mostrar tu increíble porfolio?
 </h2>
 <p>
    Pues, por supuesto, con
