--- a/additional_content/openhacknice.MULTILINGUAL.html
+++ b/additional_content/openhacknice.MULTILINGUAL.html
@@ -14,7 +14,7 @@
 @en    It was around May 2017. I was in the University of Nice Sophia-Antipolis(UNS) doing my first year of the master.
 @en    The midterm exams were looking at all students suspiciously as if they were judges of our movements outside the school.
 @es    Mayo de 2017, estaba en la universidad de Niza Sophia-Antipolis(UNS) haciendo mi primer año del master.
-@es    Lo exámenes parciales nos observaban atentamente, juzgando los movimientos y actividades que realizabamos fuera de la uni.
+@es    Lo exámenes parciales nos observaban atentamente, juzgando los movimientos y actividades que realizábamos fuera de la uni.
 </p>
 
 <p>
@@ -70,11 +70,11 @@
 @es    objetivos y funcionalidades que la demo debería tener. ¡Incluso trabajamos con un business canvas!
     <br /><br />
 @en    With the motivation and clear objectives it was just a matter of time to build a successful demo.
-@es    Con la motivación y los objetivos claros era cuestión de tiempo que produciésemos una demo excelente.
+@es    Con la motivación y los objetivos claros era cuestión de tiempo que produjésemos una demo excelente.
 </p>
 
 <p>
-@en    The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform
+@en    The idea we worked on was about addressing city issue management with the assistance of citizens through gamification. The platform
 @en    was connected with the users through twitter, although it could be done with any other social network. We decided to use the IoT and ticket
 @en    handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts. In addition, we added in
 @en    the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and
@@ -96,7 +96,7 @@
     <br /><br />
 @en    After the jury deliberation, they considered that we created a very successful demo and they awarded us with
 @en    three out of six prizes. Including
-@es    Trás el debate del jurado, se determinó que habíamos creado una solución muy interesante y nos premiaron con
+@es    Tras el debate del jurado, se determinó que habíamos creado una solución muy interesante y nos premiaron con
 @es    tres premios de los 6 que había. Incluyendo
 
 @en    <a href="https://www.tmforumlive.org/open-hack-nice/">2nd place</a>,
@@ -109,7 +109,7 @@
 @es    y premio especial de Huawei (invitación al HCE en Berlin)
     <br /><br />
 @en    Honestly, I enjoyed very much the event so far but receiving the awards was really amazing.
-@es    Honestamente, me lo pase muy bien durante el evento pero recibir 3 premios... fue realmente increible!
+@es    Honestamente, me lo pase muy bien durante el evento pero recibir 3 premios... fue realmente increíble!
 </p>
 
 <img src="imgs/openhack/team_and_award.jpg"/>
