--- a/additional_content/openhacknice.es.html
+++ b/additional_content/openhacknice.es.html
@@ -10,7 +10,7 @@
 </h2>
 <p>
    Mayo de 2017, estaba en la universidad de Niza Sophia-Antipolis(UNS) haciendo mi primer año del master.
-   Lo exámenes parciales nos observaban atentamente, juzgando los movimientos y actividades que realizabamos fuera de la uni.
+   Lo exámenes parciales nos observaban atentamente, juzgando los movimientos y actividades que realizábamos fuera de la uni.
 </p>
 
 <p>
@@ -48,7 +48,7 @@ RHIME trabajando en equipo
    En un par de horas, empezamos a trabajar como un equipo completamente cohesionado. Desde el principio decidimos la idea principal,
    objetivos y funcionalidades que la demo debería tener. ¡Incluso trabajamos con un business canvas!
     <br /><br />
-   Con la motivación y los objetivos claros era cuestión de tiempo que produciésemos una demo excelente.
+   Con la motivación y los objetivos claros era cuestión de tiempo que produjésemos una demo excelente.
 </p>
 
 <p>
@@ -63,7 +63,7 @@ RHIME trabajando en equipo
    un sistema que controlaba la contaminación en puertos mediante drones, un sistema para pagar con el móvil a través de
    la sim o una plataforma que controlaba la gestión del agua en zonas verdes con una red neuronal.
     <br /><br />
-   Trás el debate del jurado, se determinó que habíamos creado una solución muy interesante y nos premiaron con
+   Tras el debate del jurado, se determinó que habíamos creado una solución muy interesante y nos premiaron con
    tres premios de los 6 que había. Incluyendo
 
    <a href="https://www.tmforumlive.org/open-hack-nice/">2do lugar</a>,
@@ -72,7 +72,7 @@ RHIME trabajando en equipo
 
    y premio especial de Huawei (invitación al HCE en Berlin)
     <br /><br />
-   Honestamente, me lo pase muy bien durante el evento pero recibir 3 premios... fue realmente increible!
+   Honestamente, me lo pase muy bien durante el evento pero recibir 3 premios... fue realmente increíble!
 </p>
 
 <img src="imgs/openhack/team_and_award.jpg"/>
