--- a/additional_content/openhacknice.html
+++ b/additional_content/openhacknice.html
@@ -52,7 +52,7 @@ RHIME doing team work
 </p>
 
 <p>
-   The idea we worked on was about addressing city issue management with the gamificated assistance of citizens. The platform
+   The idea we worked on was about addressing city issue management with the assistance of citizens through gamification. The platform
    was connected with the users through twitter, although it could be done with any other social network. We decided to use the IoT and ticket
    handling of Salesforce, with Huawei and Vodafone APIs to manage the drones and the user accounts. In addition, we added in
    the demo an integration with google cloud AI to pre-analyse the images received from the drone (setting the priority and
