--- a/additional_content/personal_server.MULTILINGUAL.html
+++ b/additional_content/personal_server.MULTILINGUAL.html
@@ -8,7 +8,7 @@
 <i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered">
 @en    One server to rule them all!!
-@es    ¡¡Un servidor para governarlos a todos!!
+@es    ¡¡Un servidor para gobernarlos a todos!!
 </h2>
 <p>
 @en    Right now it is a project on DEVELOPMENT but stay tuned I will update little by little!!
@@ -24,7 +24,7 @@
 @en Since I was a child, I have been curious about servers although they seem to be very complex for ordinary people like me.
 @en However, I have decided to set my own server with many features, such as multimedia and remote services.
 @es Desde que era un crío, Siempre había estado intrigado sobre los servidores aunque parecían muy complicados para gente corriente como yo.
-@es Sin embargo, he decidido poner en marcha mi propio servidor con funcionalidades tales como multimedia y servicios de conexion remota.
+@es Sin embargo, he decidido poner en marcha mi propio servidor con funcionalidades tales como multimedia y servicios de conexión remota.
     <br><br>
 @en Whereas many of the services of my future server are already implemented like owncloud, it has to be set up and sometimes there are not
 @en some features that one would like to have.
