--- a/additional_content/personal_server.es.html
+++ b/additional_content/personal_server.es.html
@@ -6,7 +6,7 @@
 
 <i class="_modal_popup-close fa fa-times"></i>
 <h2 class="w3-centered">
-   ¡¡Un servidor para governarlos a todos!!
+   ¡¡Un servidor para gobernarlos a todos!!
 </h2>
 <p>
    Ahora mismo el proyecto está en DESARROLLO pero estate atento que lo actualizaré poco a poco!!
@@ -17,7 +17,7 @@
    recursos que hace mucho tiempo eran inimaginables.
     <br><br>
 Desde que era un crío, Siempre había estado intrigado sobre los servidores aunque parecían muy complicados para gente corriente como yo.
-Sin embargo, he decidido poner en marcha mi propio servidor con funcionalidades tales como multimedia y servicios de conexion remota.
+Sin embargo, he decidido poner en marcha mi propio servidor con funcionalidades tales como multimedia y servicios de conexión remota.
     <br><br>
 Mientras muchos servicios de mi futuro servidor ya están implementados en soluciones como owncloud, hay que ponerlos a punto y desarrollar
 funcionalidades que me gustaría tener y que en algunos casos no tienen.
