--- a/additional_content/summerschoolmunich.MULTILINGUAL.html
+++ b/additional_content/summerschoolmunich.MULTILINGUAL.html
@@ -38,7 +38,7 @@
      <a href="">Futurice</a>,
 @en    and honestly, they inspired really well the methodology of lean service creation,
 @en    which at first glance might seem to be just fulfilling canvases without a purpose.
-@es    que honestamente, inspiraron muy bien el uso y aplicación de la metodología de lean service creatión,
+@es    que honestamente, inspiraron muy bien el uso y aplicación de la metodología de lean service creación,
 @es    el cual podría aparentar que sólo es rellenar un conjunto de esquemas sin propósito.
 </p>
 <img src="imgs/summer_school/nimbus_canvas.jpg"alt="
@@ -55,8 +55,8 @@
 @es    En mi tiempo libre visité el centro de la ciudad y el
     <a href="http://www.deutsches-museum.de/en/collections/">Deutsches Museum</a>,
 @en    which contains material of all or almost all science fields but if you look for something specific and deep you could not get satisfied.
-@es    el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo especificamente
-@es    y en detalle puedes no quedarte satisfecho ya que es una visión a alto nivel de la mayoria de los campos.
+@es    el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo específicamente
+@es    y en detalle puedes no quedarte satisfecho ya que es una visión a alto nivel de la mayoría de los campos.
     <br /><br />
 @en    Perhaps the most exciting social activity was to build a raft and, afterwards, make a rafting race in the Spitzingsee lake.
 @es    Quizás la actividad social más interesante del summer school fue construir una barca y luego hacer una carrera con ella
@@ -79,9 +79,9 @@
 @en    educational institutions like AAlto University or some executives of EOS. Almost at the end of the week,
 @en    we have defined our context, problem and solution. We prepared a storytelling video that, with the impressive skills
 @en    of my teammates, turned to be very nice.
-@es    Realizamos varias entrevistas con muchas compañias como  Wärtsilä, Mercuris, Shapeways, y 3DBear así como a
-@es    instituciones educativas como la universidad de AAlto University o algunos ejecutivos de EOS. Al final de la semana, ya teniamos
-@es    definido nuestro contexto, problema, y solución. Empezamos a preparar una historia que, con las increibles habilidades de mis compañeros,
+@es    Realizamos varias entrevistas con muchas compañías como  Wärtsilä, Mercuris, Shapeways, y 3DBear así como a
+@es    instituciones educativas como la universidad de AAlto University o algunos ejecutivos de EOS. Al final de la semana, ya teníamos
+@es    definido nuestro contexto, problema, y solución. Empezamos a preparar una historia que, con las increíbles habilidades de mis compañeros,
 @es    quedo en forma de un video fantástico.
 
 </p>
