--- a/additional_content/summerschoolmunich.es.html
+++ b/additional_content/summerschoolmunich.es.html
@@ -27,7 +27,7 @@
     <a href="https://leanservicecreation.com/">lean service creation</a>
     mentorizado por
      <a href="">Futurice</a>,
-   que honestamente, inspiraron muy bien el uso y aplicación de la metodología de lean service creatión,
+   que honestamente, inspiraron muy bien el uso y aplicación de la metodología de lean service creación,
    el cual podría aparentar que sólo es rellenar un conjunto de esquemas sin propósito.
 </p>
 <img src="imgs/summer_school/nimbus_canvas.jpg"alt="
@@ -39,8 +39,8 @@
    Durante las dos semanas estuvimos trabajando duro todos los días, aunque también hubo tiempo para otras actividades.
    En mi tiempo libre visité el centro de la ciudad y el
     <a href="http://www.deutsches-museum.de/en/collections/">Deutsches Museum</a>,
-   el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo especificamente
-   y en detalle puedes no quedarte satisfecho ya que es una visión a alto nivel de la mayoria de los campos.
+   el cual contiene exposiciones sobre todos o casi todos los campos de la ciencia aunque si buscas algo específicamente
+   y en detalle puedes no quedarte satisfecho ya que es una visión a alto nivel de la mayoría de los campos.
     <br /><br />
    Quizás la actividad social más interesante del summer school fue construir una barca y luego hacer una carrera con ella
    en el lago Spitzingsee al sur de Munich.
@@ -55,9 +55,9 @@
 
 <a href="https://twitter.com/EOS_nimbus/status/894848203039944704">informar ocasionalmente</a>.
     <br /><br />
-   Realizamos varias entrevistas con muchas compañias como  Wärtsilä, Mercuris, Shapeways, y 3DBear así como a
-   instituciones educativas como la universidad de AAlto University o algunos ejecutivos de EOS. Al final de la semana, ya teniamos
-   definido nuestro contexto, problema, y solución. Empezamos a preparar una historia que, con las increibles habilidades de mis compañeros,
+   Realizamos varias entrevistas con muchas compañías como  Wärtsilä, Mercuris, Shapeways, y 3DBear así como a
+   instituciones educativas como la universidad de AAlto University o algunos ejecutivos de EOS. Al final de la semana, ya teníamos
+   definido nuestro contexto, problema, y solución. Empezamos a preparar una historia que, con las increíbles habilidades de mis compañeros,
    quedo en forma de un video fantástico.
 
 </p>
