--- a/additional_content/tadhackmadrid.MULTILINGUAL.html
+++ b/additional_content/tadhackmadrid.MULTILINGUAL.html
@@ -13,19 +13,19 @@
 </h2>
 <p>
 @en    It seems to be that every year in Madrid there is a hackathon called
-@es    Parece que cada año en Madrid hay un hackaton llamado
+@es    Parece que cada año en Madrid hay un hackathon llamado
     <a href="https://tadhack.com/2017/global/tadhack-madrid/">TADHack</a>.
 @en    The name TADHack comes from Telecom Application Development Hackathon. And, as you have guessed,
 @en    it is focused on telecommunications with the use of the APIs of the sponsors.
-@es    El nombre TADHack viene del acrónimo en inglés Hackaton Desarrollo de Aplicaciones de Telecomunicación.
+@es    El nombre TADHack viene del acrónimo en inglés Hackathon Desarrollo de Aplicaciones de Telecomunicación.
 @es    Y por lo tanto, está centrado en el uso de API ofrecidas por distintas empresas de telecomunicaciones.
     <br /><br />
 @en    The event was sponsored by different telecoms such as APIFONICA, Temasys or TelesTax and hosted in the Telecommunication
 @en    School of UPM, ETSIT. It lasted less than 2 days, actually, it was about 28 hours of potential work since the event started
 @en    at 10:00 am and finished at 2:00 pm on the following day.
 @es    El evento fue patrocinado por distintas compañías tales como APIFONICA, Temasys o Telestax y fue organizado en la escuela de
-@es    telecomunicaciones de la UPM, ETSIT. El hackaton duro algo menos de dos días, de hecho, fueron unas 28 horas de trabajo potencial
-@es    pues el evento empezo a las 10 de la mañana y acabó a las 2 del mediodía del día siguiente.
+@es    telecomunicaciones de la UPM, ETSIT. El hackathon duro algo menos de dos días, de hecho, fueron unas 28 horas de trabajo potencial
+@es    pues el evento empezó a las 10 de la mañana y acabó a las 2 del mediodía del día siguiente.
 </p>
 <img width="480" height="320" src="imgs/tadhackmadrid/team_work.jpg" alt="
 @en Working as a team in the TADHack, with Guliz and Santiago
