--- a/additional_content/tadhackmadrid.es.html
+++ b/additional_content/tadhackmadrid.es.html
@@ -10,14 +10,14 @@
 ¡Hora de aprender acerca de APIs para telcos!
 </h2>
 <p>
-   Parece que cada año en Madrid hay un hackaton llamado
+   Parece que cada año en Madrid hay un hackathon llamado
     <a href="https://tadhack.com/2017/global/tadhack-madrid/">TADHack</a>.
-   El nombre TADHack viene del acrónimo en inglés Hackaton Desarrollo de Aplicaciones de Telecomunicación.
+   El nombre TADHack viene del acrónimo en inglés Hackathon Desarrollo de Aplicaciones de Telecomunicación.
    Y por lo tanto, está centrado en el uso de API ofrecidas por distintas empresas de telecomunicaciones.
     <br /><br />
    El evento fue patrocinado por distintas compañías tales como APIFONICA, Temasys o Telestax y fue organizado en la escuela de
-   telecomunicaciones de la UPM, ETSIT. El hackaton duro algo menos de dos días, de hecho, fueron unas 28 horas de trabajo potencial
-   pues el evento empezo a las 10 de la mañana y acabó a las 2 del mediodía del día siguiente.
+   telecomunicaciones de la UPM, ETSIT. El hackathon duro algo menos de dos días, de hecho, fueron unas 28 horas de trabajo potencial
+   pues el evento empezó a las 10 de la mañana y acabó a las 2 del mediodía del día siguiente.
 </p>
 <img width="480" height="320" src="imgs/tadhackmadrid/team_work.jpg" alt="
 Trabajando en equipo con Guliz y Santiago
