--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -179,7 +179,7 @@
                 </h4>
                 <p>
 @en                  Right now it seems empty, but wait for a little you will see my new projects :D
-@es                  Ahora mismo esta un poco vacío, pero espera un poco ¡que hay varios proyectos en desarrollo!
+@es                  Ahora mismo está un poco vacío, pero espera un poco ¡que hay varios proyectos en desarrollo!
                 </p>
                 <p>
 @en                  In this space, I will attach all kind of projects. Why do not you take a look? maybe one of them gets your attention.
@@ -331,9 +331,9 @@
 @en                        If I had to sum up myself, I would say that I am a problem-solving person. I really
 @en                        like easy problems and medium ones, but hard problems are not big deal since one can
 @en                        split them and have several small lovely problems instead!
-@es                        Si tuviese que describirme en un par de lineas, diría que soy una persona que le gusta resolver problemas.
+@es                        Si tuviese que describirme en un par de líneas, diría que soy una persona que le gusta resolver problemas.
 @es                        Me encanta resolver problemas sencillos y otros no tan fáciles, pero los problemas más
-@es                        compejos tampoco son un obstaculo infranqueable puesto que los puedes dividir y transformar
+@es                        complejos tampoco son un obstáculo infranqueable puesto que los puedes dividir y transformar
 @es                        en varios problemas fáciles de afrontar!
                     </p>
                     <p id="about_text4">
