--- a/index.es.html
+++ b/index.es.html
@@ -158,7 +158,7 @@ Acepto
                  Proyectos
                 </h4>
                 <p>
-                 Ahora mismo esta un poco vacío, pero espera un poco ¡que hay varios proyectos en desarrollo!
+                 Ahora mismo está un poco vacío, pero espera un poco ¡que hay varios proyectos en desarrollo!
                 </p>
                 <p>
                  Aquí referenciaré proyectos de todo tipo. Quizás alguno llama tu atención, ¿por qué no le echas un vistazo?
@@ -294,9 +294,9 @@ Acepto
                    <img id="about_in_hockey" src="imgs/in_hockey.jpg" alt="Marcos in the Field Hockey pitch of Madrid Federation"/>
                     <p id="about_text3">
                        <br>
-                       Si tuviese que describirme en un par de lineas, diría que soy una persona que le gusta resolver problemas.
+                       Si tuviese que describirme en un par de líneas, diría que soy una persona que le gusta resolver problemas.
                        Me encanta resolver problemas sencillos y otros no tan fáciles, pero los problemas más
-                       compejos tampoco son un obstaculo infranqueable puesto que los puedes dividir y transformar
+                       complejos tampoco son un obstáculo infranqueable puesto que los puedes dividir y transformar
                        en varios problemas fáciles de afrontar!
                     </p>
                     <p id="about_text4">
