Update to EU regulation of compulsory agreement before storing cookies

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -127,7 +127,7 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ++++++++++++++++++++++ Pages (Content) +++++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-<div id="CookieWarning">
+<div id="CookieWarning" class="hidden">
   <div class="w3-row">
     <span>
 @en  Browsing this website you accept a fair use and storage of Cookies
