--- a/index.es.html
+++ b/index.es.html
@@ -113,7 +113,7 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ++++++++++++++++++++++ Pages (Content) +++++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-<div id="CookieWarning">
+<div id="CookieWarning" class="hidden">
   <div class="w3-row">
     <span>
  Navegando esta página web aceptas un uso y almacenaminto justo de Cookies
