--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ++++++++++++++++++++++ Pages (Content) +++++++++++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
-<div id="CookieWarning">
+<div id="CookieWarning" class="hidden">
   <div class="w3-row">
     <span>
  Browsing this website you accept a fair use and storage of Cookies
