Update some text and improve buttons appearance

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -151,8 +151,8 @@
 @es          ¡Bienvenido!
                     </h4>
                     <h5>
-@en                      I'm Marcos Bernal, a computer engineering student.
-@es                      Soy Marcos Bernal, un estudiante de ingeniería informática.
+@en                      I'm Marcos Bernal, a computer engineer.
+@es                      Soy Marcos Bernal, un ingeniero informático.
                             <br />
 @en                        Developing and creating new ideas and projects!
 @es                        ¡Desarrollando y creando nuevas ideas y proyectos!
@@ -298,7 +298,7 @@
 @es              Permíteme presentarme...
             </h4>
             <div class="showing_button">
-                <img src="imgs/text_icon.svg" id="text_button" alt="Button to show all text in description"/>
+                <div class="transformation-button" id="text_button" alt="Button to show all text in description"> [T] </div>
             </div>
             <div class="switching_content" id="text">
                 <div id="left_text" itemscope itemtype="https://schema.org/Person">
@@ -306,14 +306,14 @@
                    <p id="about_text1">
 @en                        I am <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
 @en                        Ironically, due to my last surname, you may guess that you found another 'crazy' <span itemprop="nationality">Spaniard</span>...
-@en                        well, you are not far from being right. Some classmates would say that I am finishing the Master 2 in Data Science in the
+@en                        well, you are not far from being right. Some former classmates would say that I have a Master in Data Science from
 @en                        <span itemprop="alumniOf">Technical University of Madrid (UPM)</span>, so you may consider me a
-@en                        <span itemprop="hasOccupation">data science student</span>.
+@en                        <span itemprop="hasOccupation">data engineer</span> or a Big Data Engineer.
 @es                        Soy <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
 @es                        Irónicamente, debido a mi apellido, podrías suponer que has dado con otro <span itemprop="nationality">español</span> 'loco'...
-@es                        bueno, tampoco estarías muy desencaminado siendo honestos. Algunos compañeros dirían que estoy acabando el master 2 en ciencia de datos
-@es                        en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás me podrías considerar un
-@es                        <span itemprop="hasOccupation">estudiante de ciencia de datos</span>.
+@es                        bueno, tampoco estarías muy desencaminado siendo honestos. Algunos antiguos compañeros dirían que estoy acabando el master en ciencia de datos
+@es                        en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás podrías considerarme un
+@es                        <span itemprop="hasOccupation">ingeniero de datos</span> o un ingeniero de big data.
                     </p>
                     <p id="about_text2">
 @en                        My interests are quite large and mainly focused, but not limited, on <span itemprop="seeks">computer engineering and</span>,
@@ -321,7 +321,7 @@
 @en                        security, networking, data mining and machine learning. I like to learn something useful every day and I do my best to achieve it.
 @es                        Mis intereses son numerosos y principalmente relacionados, aunque no limitados, a <span itemprop="seeks">ingeniería informática y</span>
 @es                        , por extensión, <span itemprop="seeks">ciencia de datos</span>. También me gusta la robótica, el desarrollo de software (incluyendo el
-@es                        videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada día y
+@es                        videojuegos :P), seguridad, redes, minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada día y
 @es                        pongo todo mi empeño para conseguirlo.
                     </p>
 
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <div class="showing_button">
-                <img src="imgs/graph_icon.svg" id="graph_button" alt="Button to show the graph completely"/>
+                <img class="transformation-button" src="imgs/graph_icon.svg" id="graph_button" alt="Button to show the graph completely"/>
             </div>
 
 
