--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Accept
          Welcome!
                     </h4>
                     <h5>
-                     I'm Marcos Bernal, a computer engineering student.
+                     I'm Marcos Bernal, a computer engineer.
                             <br />
                        Developing and creating new ideas and projects!
                     </h5>
@@ -272,7 +272,7 @@ Accept
              Allow me to introduce myself...
             </h4>
             <div class="showing_button">
-                <img src="imgs/text_icon.svg" id="text_button" alt="Button to show all text in description"/>
+                <div class="transformation-button" id="text_button" alt="Button to show all text in description"> [T] </div>
             </div>
             <div class="switching_content" id="text">
                 <div id="left_text" itemscope itemtype="https://schema.org/Person">
@@ -280,9 +280,9 @@ Accept
                    <p id="about_text1">
                        I am <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
                        Ironically, due to my last surname, you may guess that you found another 'crazy' <span itemprop="nationality">Spaniard</span>...
-                       well, you are not far from being right. Some classmates would say that I am finishing the Master 2 in Data Science in the
+                       well, you are not far from being right. Some former classmates would say that I have a Master in Data Science from
                        <span itemprop="alumniOf">Technical University of Madrid (UPM)</span>, so you may consider me a
-                       <span itemprop="hasOccupation">data science student</span>.
+                       <span itemprop="hasOccupation">data engineer</span> or a Big Data Engineer.
                     </p>
                     <p id="about_text2">
                        My interests are quite large and mainly focused, but not limited, on <span itemprop="seeks">computer engineering and</span>,
@@ -312,7 +312,7 @@ Accept
                 </div>
             </div>
             <div class="showing_button">
-                <img src="imgs/graph_icon.svg" id="graph_button" alt="Button to show the graph completely"/>
+                <img class="transformation-button" src="imgs/graph_icon.svg" id="graph_button" alt="Button to show the graph completely"/>
             </div>
 
 
