--- a/index.es.html
+++ b/index.es.html
@@ -134,7 +134,7 @@ Acepto
          ¡Bienvenido!
                     </h4>
                     <h5>
-                     Soy Marcos Bernal, un estudiante de ingeniería informática.
+                     Soy Marcos Bernal, un ingeniero informático.
                             <br />
                        ¡Desarrollando y creando nuevas ideas y proyectos!
                     </h5>
@@ -272,7 +272,7 @@ Acepto
              Permíteme presentarme...
             </h4>
             <div class="showing_button">
-                <img src="imgs/text_icon.svg" id="text_button" alt="Button to show all text in description"/>
+                <div class="transformation-button" id="text_button" alt="Button to show all text in description"> [T] </div>
             </div>
             <div class="switching_content" id="text">
                 <div id="left_text" itemscope itemtype="https://schema.org/Person">
@@ -280,14 +280,14 @@ Acepto
                    <p id="about_text1">
                        Soy <span itemprop="givenName">Marcos</span> <span itemprop="familyName">Bernal España</span>.
                        Irónicamente, debido a mi apellido, podrías suponer que has dado con otro <span itemprop="nationality">español</span> 'loco'...
-                       bueno, tampoco estarías muy desencaminado siendo honestos. Algunos compañeros dirían que estoy acabando el master 2 en ciencia de datos
-                       en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás me podrías considerar un
-                       <span itemprop="hasOccupation">estudiante de ciencia de datos</span>.
+                       bueno, tampoco estarías muy desencaminado siendo honestos. Algunos antiguos compañeros dirían que estoy acabando el master en ciencia de datos
+                       en la <span itemprop="alumniOf">Universidad Politécnica de Madrid (UPM)</span>, así que quizás podrías considerarme un
+                       <span itemprop="hasOccupation">ingeniero de datos</span> o un ingeniero de big data.
                     </p>
                     <p id="about_text2">
                        Mis intereses son numerosos y principalmente relacionados, aunque no limitados, a <span itemprop="seeks">ingeniería informática y</span>
                        , por extensión, <span itemprop="seeks">ciencia de datos</span>. También me gusta la robótica, el desarrollo de software (incluyendo el
-                       videojuegos :P), seguridad, redesm minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada día y
+                       videojuegos :P), seguridad, redes, minería de datos y aprendizaje automático. Me gusta aprender algo nuevo y útil cada día y
                        pongo todo mi empeño para conseguirlo.
                     </p>
 
@@ -314,7 +314,7 @@ Acepto
                 </div>
             </div>
             <div class="showing_button">
-                <img src="imgs/graph_icon.svg" id="graph_button" alt="Button to show the graph completely"/>
+                <img class="transformation-button" src="imgs/graph_icon.svg" id="graph_button" alt="Button to show the graph completely"/>
             </div>
 
 
