General improvements, add better way to deal with cookies retrieving default value, simplify loading of multilingual pages

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
         <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-github w3-hover-opacity"></i></a>
         <div class="w3-bar-item w3-right w3-hide-small" style="cursor:default">|</div>
-        <i class="w3-bar-item w3-button w3-hide-small w3-right lang spanish_lang"><img src="imgs/flag-of-spain.jpg" alt="Spanish language - flag of spain"></i>
-        <i class="w3-bar-item w3-button w3-hide-small w3-right lang english_lang"><img src="imgs/flag-of-english.jpg" alt="English language - flag of UK/US"></i>
+        <i class="w3-bar-item w3-button w3-hide-small w3-right lang spanish_lang" data="es"><img src="imgs/flag-of-spain.jpg" alt="Spanish language - flag of spain"></i>
+        <i class="w3-bar-item w3-button w3-hide-small w3-right lang english_lang" data="en"><img src="imgs/flag-of-english.jpg" alt="English language - flag of UK/US"></i>
     </div>
     <div class="aux_black_bar">
       <div class="responsive_menu">
@@ -104,7 +104,7 @@
               <a href="#Contact"><i class="fa fa-envelope"></i>
           Contact
               </a>
-        <a class="lang spanish_lang"><i class="fa fa-language"></i> Español </a>
+        <a class="lang spanish_lang" data="es"><i class="fa fa-language"></i> Español </a>
           </div>
       </div>
     </div>
@@ -406,70 +406,6 @@ Accept
                 </span>
               </button>
             </form>
-
-
-            <!-- Carousel div from carousel.js from bootstrap
-            <div id="aboutme_carousel" class="carousel slide" data-ride="carousel">
-
-            <ol class="carousel-indicators">
-              <li data-target="#aboutme_carousel" data-slide-to="0" class="active"></li>
-              <li data-target="#aboutme_carousel" data-slide-to="1"></li>
-              <li data-target="#aboutme_carousel" data-slide-to="2"></li>
-              <li data-target="#aboutme_carousel" data-slide-to="3"></li>
-              <li data-target="#aboutme_carousel" data-slide-to="4"></li>
-              <li data-target="#aboutme_carousel" data-slide-to="5"></li>
-            </ol>
-
-                <div class="carousel-inner" role="listbox">
-
-                  <div class="item active">
-                    <div id="car_about_text1" class="carousel-caption">
-                      <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div id="car_about_text2" class="carousel-caption">
-                      <h3>Chania</h3>
-                      <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div id="car_about_in_hce" class="carousel-caption">
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div id="car_about_text3" class="carousel-caption">
-                      <h3>Flowers</h3>
-                      <p>Beautiful flowers in Kolymbari, Crete.</p>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div id="car_about_text4" class="carousel-caption">
-                      <h3>Flowers</h3>
-                      <p>Beautiful flowers in Kolymbari, Crete.</p>
-                    </div>
-                  </div>
-
-                  <div class="item">
-                    <div id="car_about_in_hockey" class="carousel-caption">
-                    </div>
-                  </div>
-
-                </div>
-
-                <a class="left carousel-control" href="#aboutme_carousel" role="button" data-slide="prev">
-                  <span class="fa fa-chevron-left" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#aboutme_carousel" role="button" data-slide="next">
-                  <span class="fa fa-chevron-right" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div> -->
         </div>
     </div>
 
@@ -493,7 +429,7 @@ Accept
     <div class="license">
         <p class="w3-small"><span>
          Content licensed
-          <a href="https://creativecommons.org/licenses/by-sa/4.0/" style="font-weight: bold;" >CC BY-SA</a></span> © 2017 Marcos Bernal España</p>
+          <a href="https://creativecommons.org/licenses/by-sa/4.0/" style="font-weight: bold;" >CC BY-SA</a></span> © 2020 Marcos Bernal España</p>
         <a href="https://github.com/MarcosBernal/marcosbernal.github.io" class="w3-small">
           <p>
             Details and credits in Marcos' github repo
