Change contact server logic to use new connection with aws serverless

--- a/index.MULTILINGUAL.html
+++ b/index.MULTILINGUAL.html
@@ -455,6 +455,10 @@
 @en                Please, review the wrong fields!
 @es                Por favor, ¡revisa los campos erróneos!
                 </span>
+                  <span class="msg_btn_text error_sending">
+@en                Something was wrong D: Sorry! try again later
+@es                Algo salió mal D: ¡Lo siento! Inténtalo de nuevo mas tarde
+                </span>
                 <span class="msg_btn_text confirmation_text">
 @en                Message was properly sent!!
 @es                ¡¡El mensage fue enviado correctamente!!
