--- a/index.es.html
+++ b/index.es.html
@@ -403,6 +403,9 @@ Acepto
                 <span class="msg_btn_text check_text">
                Por favor, ¡revisa los campos erróneos!
                 </span>
+                  <span class="msg_btn_text error_sending">
+               Algo salió mal D: ¡Lo siento! Inténtalo de nuevo mas tarde
+                </span>
                 <span class="msg_btn_text confirmation_text">
                ¡¡El mensage fue enviado correctamente!!
                 </span>
