--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@ Accept
                 <span class="msg_btn_text check_text">
                Please, review the wrong fields!
                 </span>
+                  <span class="msg_btn_text error_sending">
+               Something was wrong D: Sorry! try again later
+                </span>
                 <span class="msg_btn_text confirmation_text">
                Message was properly sent!!
                 </span>
