Minor improvements and add social link support to cookies

--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@ Accept
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 <footer class="w3-container w3-center w3-black w3-padding-24">
     <div class="w3-xlarge w3-section">
-        <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-github"></i></a>
-        <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-linkedin"></i></a>
-        <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hover-opacity w3-round-small"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/MarcosBernal" class="w3-bar-item w3-button w3-hover-opacity w3-round-small social-button" data="github"><i class="fa fa-github"></i></a>
+        <a href="https://es.linkedin.com/in/marcosbernalespana" class="w3-bar-item w3-button w3-hover-opacity w3-round-small social-button" data="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="https://twitter.com/marcosbernal_es" class="w3-bar-item w3-button w3-hover-opacity w3-round-small social-button" data="twitter"><i class="fa fa-twitter"></i></a>
     </div>
     <p>
      Created with
